// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header should change language and theme 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="bg-primary position-sticky top-0 z-2"
      >
        <nav
          class="navbar navbar-expand-sm navbar-dark header-wrapper m-auto ps-3 pe-3"
        >
          <span
            class="navbar-brand cursor-pointer"
          >
            Мои доски
          </span>
          <div
            class="dropdown align-items-center d-flex cursor-pointer ms-auto"
          >
            <div
              aria-expanded="false"
              class="dropdown-toggle p-2"
              data-bs-toggle="dropdown"
              data-testid="dropdown-toggle"
            >
              <svg
                class="bi bi-sun-fill"
                data-testid="light-icon"
                fill="white"
                height="24"
                viewBox="0 0 16 16"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"
                />
              </svg>
            </div>
            <ul
              class="dropdown-menu dropdown-menu-end position-absolute"
              data-testid="dropdown-menu"
            >
              <li>
                <span
                  class="dropdown-item"
                >
                  Темная
                </span>
              </li>
              <li>
                <span
                  class="dropdown-item"
                >
                  Светлая
                </span>
              </li>
            </ul>
          </div>
          <div
            class="dropdown align-items-center d-flex cursor-pointer"
          >
            <div
              aria-expanded="false"
              class="font-light dropdown-toggle p-2"
              data-bs-toggle="dropdown"
              data-testid="dropdown-toggle"
            >
              <svg
                class="bi bi-translate"
                fill="white"
                height="24"
                viewBox="0 0 16 16"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4.545 6.714 4.11 8H3l1.862-5h1.284L8 8H6.833l-.435-1.286H4.545zm1.634-.736L5.5 3.956h-.049l-.679 2.022H6.18z"
                />
                <path
                  d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2zm7.138 9.995c.193.301.402.583.63.846-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6.066 6.066 0 0 1-.415-.492 1.988 1.988 0 0 1-.94.31z"
                />
              </svg>
            </div>
            <ul
              class="dropdown-menu dropdown-menu-end"
              data-testid="dropdown-menu"
            >
              <li>
                <span
                  class="dropdown-item"
                >
                  English
                </span>
              </li>
              <li>
                <span
                  class="dropdown-item"
                >
                  Русский
                </span>
              </li>
            </ul>
          </div>
          <button
            aria-expanded="false"
            class="navbar-toggler ms-2"
            data-bs-target="#offcanvasNav"
            data-bs-toggle="offcanvas"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="offcanvas offcanvas-end"
            id="offcanvasNav"
          >
            <div
              class="offcanvas-header"
            >
              <h5
                class="offcanvas-title"
                id="offcanvasNavbarLabel"
              >
                Меню
              </h5>
              <button
                aria-label="Close"
                class="btn-close"
                data-bs-dismiss="offcanvas"
                type="button"
              />
            </div>
            <div
              class="offcanvas-body"
            >
              <ul
                class="navbar-nav"
              >
                <li
                  class="nav-item"
                >
                  <span
                    class="nav-link cursor-pointer"
                  >
                    Добавить доску
                  </span>
                </li>
                <li
                  class="nav-item"
                >
                  <span
                    class="nav-link cursor-pointer"
                  >
                    Кабинет
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </nav>
      </header>
    </div>
  </body>,
  "container": <div>
    <header
      class="bg-primary position-sticky top-0 z-2"
    >
      <nav
        class="navbar navbar-expand-sm navbar-dark header-wrapper m-auto ps-3 pe-3"
      >
        <span
          class="navbar-brand cursor-pointer"
        >
          Мои доски
        </span>
        <div
          class="dropdown align-items-center d-flex cursor-pointer ms-auto"
        >
          <div
            aria-expanded="false"
            class="dropdown-toggle p-2"
            data-bs-toggle="dropdown"
            data-testid="dropdown-toggle"
          >
            <svg
              class="bi bi-sun-fill"
              data-testid="light-icon"
              fill="white"
              height="24"
              viewBox="0 0 16 16"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M8 12a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"
              />
            </svg>
          </div>
          <ul
            class="dropdown-menu dropdown-menu-end position-absolute"
            data-testid="dropdown-menu"
          >
            <li>
              <span
                class="dropdown-item"
              >
                Темная
              </span>
            </li>
            <li>
              <span
                class="dropdown-item"
              >
                Светлая
              </span>
            </li>
          </ul>
        </div>
        <div
          class="dropdown align-items-center d-flex cursor-pointer"
        >
          <div
            aria-expanded="false"
            class="font-light dropdown-toggle p-2"
            data-bs-toggle="dropdown"
            data-testid="dropdown-toggle"
          >
            <svg
              class="bi bi-translate"
              fill="white"
              height="24"
              viewBox="0 0 16 16"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.545 6.714 4.11 8H3l1.862-5h1.284L8 8H6.833l-.435-1.286H4.545zm1.634-.736L5.5 3.956h-.049l-.679 2.022H6.18z"
              />
              <path
                d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2zm7.138 9.995c.193.301.402.583.63.846-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6.066 6.066 0 0 1-.415-.492 1.988 1.988 0 0 1-.94.31z"
              />
            </svg>
          </div>
          <ul
            class="dropdown-menu dropdown-menu-end"
            data-testid="dropdown-menu"
          >
            <li>
              <span
                class="dropdown-item"
              >
                English
              </span>
            </li>
            <li>
              <span
                class="dropdown-item"
              >
                Русский
              </span>
            </li>
          </ul>
        </div>
        <button
          aria-expanded="false"
          class="navbar-toggler ms-2"
          data-bs-target="#offcanvasNav"
          data-bs-toggle="offcanvas"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="offcanvas offcanvas-end"
          id="offcanvasNav"
        >
          <div
            class="offcanvas-header"
          >
            <h5
              class="offcanvas-title"
              id="offcanvasNavbarLabel"
            >
              Меню
            </h5>
            <button
              aria-label="Close"
              class="btn-close"
              data-bs-dismiss="offcanvas"
              type="button"
            />
          </div>
          <div
            class="offcanvas-body"
          >
            <ul
              class="navbar-nav"
            >
              <li
                class="nav-item"
              >
                <span
                  class="nav-link cursor-pointer"
                >
                  Добавить доску
                </span>
              </li>
              <li
                class="nav-item"
              >
                <span
                  class="nav-link cursor-pointer"
                >
                  Кабинет
                </span>
              </li>
            </ul>
          </div>
        </div>
      </nav>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Header should display the correct navbar items when the user is logged in 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="bg-primary position-sticky top-0 z-2"
      >
        <nav
          class="navbar navbar-expand-sm navbar-dark header-wrapper m-auto ps-3 pe-3"
        >
          <span
            class="navbar-brand cursor-pointer"
          >
            My boards
          </span>
          <div
            class="dropdown align-items-center d-flex cursor-pointer ms-auto"
          >
            <div
              aria-expanded="false"
              class="dropdown-toggle p-2"
              data-bs-toggle="dropdown"
              data-testid="dropdown-toggle"
            >
              <svg
                class="bi bi-moon-stars-fill"
                data-testid="dark-icon"
                fill="white"
                height="24"
                viewBox="0 0 16 16"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"
                />
                <path
                  d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"
                />
              </svg>
            </div>
            <ul
              class="dropdown-menu dropdown-menu-end position-absolute"
              data-testid="dropdown-menu"
            >
              <li>
                <span
                  class="dropdown-item"
                >
                  Dark
                </span>
              </li>
              <li>
                <span
                  class="dropdown-item"
                >
                  Light
                </span>
              </li>
            </ul>
          </div>
          <div
            class="dropdown align-items-center d-flex cursor-pointer"
          >
            <div
              aria-expanded="false"
              class="font-light dropdown-toggle p-2"
              data-bs-toggle="dropdown"
              data-testid="dropdown-toggle"
            >
              <svg
                class="bi bi-translate"
                fill="white"
                height="24"
                viewBox="0 0 16 16"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4.545 6.714 4.11 8H3l1.862-5h1.284L8 8H6.833l-.435-1.286H4.545zm1.634-.736L5.5 3.956h-.049l-.679 2.022H6.18z"
                />
                <path
                  d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2zm7.138 9.995c.193.301.402.583.63.846-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6.066 6.066 0 0 1-.415-.492 1.988 1.988 0 0 1-.94.31z"
                />
              </svg>
            </div>
            <ul
              class="dropdown-menu dropdown-menu-end"
              data-testid="dropdown-menu"
            >
              <li>
                <span
                  class="dropdown-item"
                >
                  English
                </span>
              </li>
              <li>
                <span
                  class="dropdown-item"
                >
                  Русский
                </span>
              </li>
            </ul>
          </div>
          <button
            aria-expanded="false"
            class="navbar-toggler ms-2"
            data-bs-target="#offcanvasNav"
            data-bs-toggle="offcanvas"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
          <div
            class="offcanvas offcanvas-end"
            id="offcanvasNav"
          >
            <div
              class="offcanvas-header"
            >
              <h5
                class="offcanvas-title"
                id="offcanvasNavbarLabel"
              >
                Menu
              </h5>
              <button
                aria-label="Close"
                class="btn-close"
                data-bs-dismiss="offcanvas"
                type="button"
              />
            </div>
            <div
              class="offcanvas-body"
            >
              <ul
                class="navbar-nav"
              >
                <li
                  class="nav-item"
                >
                  <span
                    class="nav-link cursor-pointer"
                  >
                    Add board
                  </span>
                </li>
                <li
                  class="nav-item"
                >
                  <span
                    class="nav-link cursor-pointer"
                  >
                    Cabinet
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </nav>
      </header>
    </div>
  </body>,
  "container": <div>
    <header
      class="bg-primary position-sticky top-0 z-2"
    >
      <nav
        class="navbar navbar-expand-sm navbar-dark header-wrapper m-auto ps-3 pe-3"
      >
        <span
          class="navbar-brand cursor-pointer"
        >
          My boards
        </span>
        <div
          class="dropdown align-items-center d-flex cursor-pointer ms-auto"
        >
          <div
            aria-expanded="false"
            class="dropdown-toggle p-2"
            data-bs-toggle="dropdown"
            data-testid="dropdown-toggle"
          >
            <svg
              class="bi bi-moon-stars-fill"
              data-testid="dark-icon"
              fill="white"
              height="24"
              viewBox="0 0 16 16"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"
              />
              <path
                d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"
              />
            </svg>
          </div>
          <ul
            class="dropdown-menu dropdown-menu-end position-absolute"
            data-testid="dropdown-menu"
          >
            <li>
              <span
                class="dropdown-item"
              >
                Dark
              </span>
            </li>
            <li>
              <span
                class="dropdown-item"
              >
                Light
              </span>
            </li>
          </ul>
        </div>
        <div
          class="dropdown align-items-center d-flex cursor-pointer"
        >
          <div
            aria-expanded="false"
            class="font-light dropdown-toggle p-2"
            data-bs-toggle="dropdown"
            data-testid="dropdown-toggle"
          >
            <svg
              class="bi bi-translate"
              fill="white"
              height="24"
              viewBox="0 0 16 16"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.545 6.714 4.11 8H3l1.862-5h1.284L8 8H6.833l-.435-1.286H4.545zm1.634-.736L5.5 3.956h-.049l-.679 2.022H6.18z"
              />
              <path
                d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2zm7.138 9.995c.193.301.402.583.63.846-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6.066 6.066 0 0 1-.415-.492 1.988 1.988 0 0 1-.94.31z"
              />
            </svg>
          </div>
          <ul
            class="dropdown-menu dropdown-menu-end"
            data-testid="dropdown-menu"
          >
            <li>
              <span
                class="dropdown-item"
              >
                English
              </span>
            </li>
            <li>
              <span
                class="dropdown-item"
              >
                Русский
              </span>
            </li>
          </ul>
        </div>
        <button
          aria-expanded="false"
          class="navbar-toggler ms-2"
          data-bs-target="#offcanvasNav"
          data-bs-toggle="offcanvas"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
        <div
          class="offcanvas offcanvas-end"
          id="offcanvasNav"
        >
          <div
            class="offcanvas-header"
          >
            <h5
              class="offcanvas-title"
              id="offcanvasNavbarLabel"
            >
              Menu
            </h5>
            <button
              aria-label="Close"
              class="btn-close"
              data-bs-dismiss="offcanvas"
              type="button"
            />
          </div>
          <div
            class="offcanvas-body"
          >
            <ul
              class="navbar-nav"
            >
              <li
                class="nav-item"
              >
                <span
                  class="nav-link cursor-pointer"
                >
                  Add board
                </span>
              </li>
              <li
                class="nav-item"
              >
                <span
                  class="nav-link cursor-pointer"
                >
                  Cabinet
                </span>
              </li>
            </ul>
          </div>
        </div>
      </nav>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Header should display the correct navbar items when the user is not logged in 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <header
        class="bg-primary position-sticky top-0 z-2"
      >
        <nav
          class="navbar navbar-expand-sm navbar-dark header-wrapper m-auto ps-3 pe-3"
        >
          <div
            class="dropdown align-items-center d-flex cursor-pointer ms-auto"
          >
            <div
              aria-expanded="false"
              class="dropdown-toggle p-2"
              data-bs-toggle="dropdown"
              data-testid="dropdown-toggle"
            >
              <svg
                class="bi bi-moon-stars-fill"
                data-testid="dark-icon"
                fill="white"
                height="24"
                viewBox="0 0 16 16"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"
                />
                <path
                  d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"
                />
              </svg>
            </div>
            <ul
              class="dropdown-menu dropdown-menu-end position-absolute"
              data-testid="dropdown-menu"
            >
              <li>
                <span
                  class="dropdown-item"
                >
                  Dark
                </span>
              </li>
              <li>
                <span
                  class="dropdown-item"
                >
                  Light
                </span>
              </li>
            </ul>
          </div>
          <div
            class="dropdown align-items-center d-flex cursor-pointer"
          >
            <div
              aria-expanded="false"
              class="font-light dropdown-toggle p-2"
              data-bs-toggle="dropdown"
              data-testid="dropdown-toggle"
            >
              <svg
                class="bi bi-translate"
                fill="white"
                height="24"
                viewBox="0 0 16 16"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M4.545 6.714 4.11 8H3l1.862-5h1.284L8 8H6.833l-.435-1.286H4.545zm1.634-.736L5.5 3.956h-.049l-.679 2.022H6.18z"
                />
                <path
                  d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2zm7.138 9.995c.193.301.402.583.63.846-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6.066 6.066 0 0 1-.415-.492 1.988 1.988 0 0 1-.94.31z"
                />
              </svg>
            </div>
            <ul
              class="dropdown-menu dropdown-menu-end"
              data-testid="dropdown-menu"
            >
              <li>
                <span
                  class="dropdown-item"
                >
                  English
                </span>
              </li>
              <li>
                <span
                  class="dropdown-item"
                >
                  Русский
                </span>
              </li>
            </ul>
          </div>
          <button
            aria-expanded="false"
            class="navbar-toggler ms-2"
            data-bs-target="#offcanvasNav"
            data-bs-toggle="offcanvas"
            type="button"
          >
            <span
              class="navbar-toggler-icon"
            />
          </button>
        </nav>
      </header>
    </div>
  </body>,
  "container": <div>
    <header
      class="bg-primary position-sticky top-0 z-2"
    >
      <nav
        class="navbar navbar-expand-sm navbar-dark header-wrapper m-auto ps-3 pe-3"
      >
        <div
          class="dropdown align-items-center d-flex cursor-pointer ms-auto"
        >
          <div
            aria-expanded="false"
            class="dropdown-toggle p-2"
            data-bs-toggle="dropdown"
            data-testid="dropdown-toggle"
          >
            <svg
              class="bi bi-moon-stars-fill"
              data-testid="dark-icon"
              fill="white"
              height="24"
              viewBox="0 0 16 16"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278z"
              />
              <path
                d="M10.794 3.148a.217.217 0 0 1 .412 0l.387 1.162c.173.518.579.924 1.097 1.097l1.162.387a.217.217 0 0 1 0 .412l-1.162.387a1.734 1.734 0 0 0-1.097 1.097l-.387 1.162a.217.217 0 0 1-.412 0l-.387-1.162A1.734 1.734 0 0 0 9.31 6.593l-1.162-.387a.217.217 0 0 1 0-.412l1.162-.387a1.734 1.734 0 0 0 1.097-1.097l.387-1.162zM13.863.099a.145.145 0 0 1 .274 0l.258.774c.115.346.386.617.732.732l.774.258a.145.145 0 0 1 0 .274l-.774.258a1.156 1.156 0 0 0-.732.732l-.258.774a.145.145 0 0 1-.274 0l-.258-.774a1.156 1.156 0 0 0-.732-.732l-.774-.258a.145.145 0 0 1 0-.274l.774-.258c.346-.115.617-.386.732-.732L13.863.1z"
              />
            </svg>
          </div>
          <ul
            class="dropdown-menu dropdown-menu-end position-absolute"
            data-testid="dropdown-menu"
          >
            <li>
              <span
                class="dropdown-item"
              >
                Dark
              </span>
            </li>
            <li>
              <span
                class="dropdown-item"
              >
                Light
              </span>
            </li>
          </ul>
        </div>
        <div
          class="dropdown align-items-center d-flex cursor-pointer"
        >
          <div
            aria-expanded="false"
            class="font-light dropdown-toggle p-2"
            data-bs-toggle="dropdown"
            data-testid="dropdown-toggle"
          >
            <svg
              class="bi bi-translate"
              fill="white"
              height="24"
              viewBox="0 0 16 16"
              width="24"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4.545 6.714 4.11 8H3l1.862-5h1.284L8 8H6.833l-.435-1.286H4.545zm1.634-.736L5.5 3.956h-.049l-.679 2.022H6.18z"
              />
              <path
                d="M0 2a2 2 0 0 1 2-2h7a2 2 0 0 1 2 2v3h3a2 2 0 0 1 2 2v7a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2v-3H2a2 2 0 0 1-2-2V2zm2-1a1 1 0 0 0-1 1v7a1 1 0 0 0 1 1h7a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1H2zm7.138 9.995c.193.301.402.583.63.846-.748.575-1.673 1.001-2.768 1.292.178.217.451.635.555.867 1.125-.359 2.08-.844 2.886-1.494.777.665 1.739 1.165 2.93 1.472.133-.254.414-.673.629-.89-1.125-.253-2.057-.694-2.82-1.284.681-.747 1.222-1.651 1.621-2.757H14V8h-3v1.047h.765c-.318.844-.74 1.546-1.272 2.13a6.066 6.066 0 0 1-.415-.492 1.988 1.988 0 0 1-.94.31z"
              />
            </svg>
          </div>
          <ul
            class="dropdown-menu dropdown-menu-end"
            data-testid="dropdown-menu"
          >
            <li>
              <span
                class="dropdown-item"
              >
                English
              </span>
            </li>
            <li>
              <span
                class="dropdown-item"
              >
                Русский
              </span>
            </li>
          </ul>
        </div>
        <button
          aria-expanded="false"
          class="navbar-toggler ms-2"
          data-bs-target="#offcanvasNav"
          data-bs-toggle="offcanvas"
          type="button"
        >
          <span
            class="navbar-toggler-icon"
          />
        </button>
      </nav>
    </header>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
